# rust-disperse-endpoint

./: Cargo.toml  token-abi.json
src/: main.rs
src/connectors/: collect_connector.rs  disperse_connector.rs  mod.rs
